envoy.yaml
# static_resources:
#   listeners:
#   - name: listener_0
#     address:
#       socket_address: { address: 0.0.0.0, port_value: 8080 }
#     filter_chains:
#     - filters:
#       - name: envoy.http_connection_manager
#         config:
#           codec_type: auto
#           stat_prefix: ingress_http
#           route_config:
#             name: local_route
#             virtual_hosts:
#             - name: local_service
#               domains: ["*"]
#               routes:
#               - match:
#                   prefix: "/"
#                 route:
#                   cluster: auth_service
#               cors:
#                 allow_origin:
#                 - "*"
#                 allow_methods: GET, PUT, DELETE, POST, OPTIONS
#                 allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
#                 max_age: "1728000"
#                 expose_headers: grpc-status,grpc-message
#                 enabled: true
#           http_filters:
#           - name: envoy.grpc_web
#           - name: envoy.cors
#           - name: envoy.router
#   clusters:
#   - name: auth_service
#     connect_timeout: 0.25s
#     type: logical_dns
#     http2_protocol_options: {}
#     lb_policy: round_robin
#     hosts: [{ socket_address: { address: 192.168.99.101, port_value: 50051 }}]
# socket_address:
#   address: auth-server
#   port_value: 9090

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 50051 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: echo_service }
              # cors:
              #   allow_origin: ["*"]
              #   allow_methods: GET, PUT, DELETE, POST, OPTIONS
              #   allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
              #   max_age: "1728000"
              #   expose_headers: custom-header-1,grpc-status,grpc-message
              #   enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: echo_service
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 192.168.99.101, port_value: 50051 }}]
